Added solutions 1-1, 2-2 and outline

--- a/solutions/unit-01_setup/solutions_1-1.ipynb
+++ b/solutions/unit-01_setup/solutions_1-1.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "**2. Navigate to your desktop.**\n",
     "\n",
-    "cd C:\\Users\\YourUsername\\Desktop\n",
+    "`cd C:\\Users\\YourUsername\\Desktop`\n",
     "\n",
     "This command changes the current directory to your Desktop. Replace 'YourUsername' with your actual Windows username."
    ]
